# parquet_interop

./: Cargo.toml  README.md  build.rs
src/: ffi.rs  lib.rs  read.rs  stream.rs  write.rs
tests/: adversarial.py  check_l_written.py  make_fixtures.py  matrix.py  run_all.sh  test_edge.q  test_leak.q  test_parquet.q
